--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asgiref>=3.5.0,<4
+asgiref==3.4.1
 autopep8==1.5.7
 dj-database-url==0.5.0
 Django==3.2.6
@@ -13,4 +13,18 @@ whitenoise==5.3.0
 psycopg2-binary
 redis~=5.0.1
 channels~=4.0.0
+asgiref>=3.5.0,<4
+autopep8==1.5.7
+dj-database-url==0.5.0
+Django==3.2.6
+gunicorn==20.1.0
+pycodestyle==2.7.0
+python-decouple==3.4
+pytz==2021.1
+sqlparse==0.4.1
+toml==0.10.2
+Unipath==1.1
+whitenoise==5.3.0
+psycopg2-binary
+redis~=5.0.1
 pusher~=3.3.2
